MasterAxTest/MasterAxTest/Templates/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "Project Name": {
      "type": "string",
      "defaultValue": "Cust1",
      "minLength": 3,
      "maxLength": 8,
      "metadata": {
        "description": "Name for the project. This will be used to name other resources."
      }
    },
    "Location": {
      "type": "string",
      "defaultValue": "West Europe",
      "allowedValues": [ "East China", "East US2", "West Europe", "West Japan", "West US", "Southeast Asia" ],
      "metadata": {
        "description": "The location to roll out the project. This location must support premium storage."
      }
    },
    "Windows Domain name": {
      "type": "string",
      "minLength": 5,
      "metadata": {
        "description": "Name of the Windows domain, something like domain.local"
      }
    },
    "DomainAdmin": {
      "type": "string",
      "defaultValue": "adminSVDW",
      "metadata": {
        "description": "Name of the domain administrator."
      }
    },
    "DomainAdminPassword": {
      "type": "securestring",
      "minLength": 8,
      "metadata": {
        "description": "Password for the domain administrator"
      }
    },
    "DCSize": {
      "type": "string",
      "defaultValue": "Standard_D1_v2",
      "allowedValues": [
        "Standard_A1",
        "Standard_A2",
        "Standard_A3",
        "Standard_A4",
        "Standard_D1",
        "Standard_D2",
        "Standard_D3",
        "Standard_D4",
        "Standard_D1_v2",
        "Standard_D2_v2",
        "Standard_D3_v2",
        "Standard_D4_v2"
      ],
      "metadata": {
        "desciption": "Size of the domain controller."
      }
    },
    "RDSSize": {
      "type": "string",
      "defaultValue": "Standard_D1_v2",
      "allowedValues": [
        "Standard_A1",
        "Standard_A2",
        "Standard_A3",
        "Standard_A4",
        "Standard_D1",
        "Standard_D2",
        "Standard_D3",
        "Standard_D4",
        "Standard_D1_v2",
        "Standard_D2_v2",
        "Standard_D3_v2",
        "Standard_D4_v2"
      ],
      "metadata": {
        "description": "Size of the RDS server."
      }
    }


  },
  "variables": {
    "StandardStorageAccountName": "[tolower(concat(parameters('Project Name'),'standard'))]",
    "StandardStorageAccountType": "Standard_LRS",
    "StandardStorageAccountDisplayName": "StandardStorageAccount",
    "VNetName": "[concat(parameters('Project Name'),'VNet')]",
    "VNetPrefix": "172.16.0.0/16",
    "VNetSubnet1Name": "DCs",
    "VNetSubnet1Prefix": "172.16.0.0/24",
    "VNetSubnet2Name": "Servers",
    "VNetSubnet2Prefix": "172.16.1.0/24",
    "DCAvailabilitySetName": "[concat(parameters('Project Name'), 'DCAvailabilitySet')]",
    "DCSecurityGroupName": "[concat(parameters('Project Name'), 'DCSecurityGroup')]",
    "DC01Name": "[concat(parameters('Project Name'),'DC01')]",
    "DCIPaddress": "172.16.0.10",
    "DCWindowsOSVersion": "2012-R2-Datacenter",
    "RDSAvailabilitySetName": "[concat(parameters('Project Name'), 'RDSAvailabilitySet')]",
    "RDSSecurityGroupName": "[concat(parameters('Project Name'), 'RDSSecurityGroup')]",
    "RDS01Name": "[concat(parameters('Project Name'), 'RDS01')]",
    "RDS01IPAddress": "172.16.1.20",
    "RDSWindowsOSVersion": "2012-R2-Datacenter",
    "AssetLocation": "https://raw.githubusercontent.com/svendewindt/azure/master/MasterAxTest/MasterAxTest",
    "WMFVersion": "5.0",
    "apiVersion": "2016-01-01",
    "customScriptUrl": "[concat(variables('AssetLocation'),'/CustomScripts/startOrchestration.ps1')]",
    "customScriptName": "startOrchestration.ps1",
    "customScriptParameters": "[concat(' -RDSBroker ', variables('DC01Name'), ' -RDSWebAccess ', variables('RDS01Name'), ' -RDSHost ', variables('RDS01Name'))]"

  },
  "resources": [
    {
      "name": "[variables('StandardStorageAccountName')]",
      "type": "Microsoft.Storage/storageAccounts",
      "location": "[parameters('Location')]",
      "apiVersion": "2015-06-15",
      "dependsOn": [],
      "tags": {
        "displayName": "[variables('StandardStorageAccountDisplayName')]"
      },
      "properties": {
        "accountType": "[variables('StandardStorageAccountType')]"
      }
    },
    {
      "name": "[variables('VNetname')]",
      "type": "Microsoft.Network/virtualNetworks",
      "location": "[parameters('location')]",
      "apiVersion": "2015-06-15",
      "dependsOn": [],
      "tags": {
        "displayName": "[variables('VNetname')]"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('VNetPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('VNetSubnet1Name')]",
            "properties": {
              "addressPrefix": "[variables('VNetSubnet1Prefix')]"
            }
          },
          {
            "name": "[variables('VNetSubnet2Name')]",
            "properties": {
              "addressPrefix": "[variables('VNetSubnet2Prefix')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('DCSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow_rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-05-01-preview",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('RDSSecurityGroupName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow_rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow_https",
            "properties": {
              "description": "Allow HTTPS",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 110,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow_http",
            "properties": {
              "description": "Allow HTTP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 120,
              "direction": "Inbound"
            }
          },
          {
            "name": "Allow_rdp_udp",
            "properties": {
              "description": "Allow RDP - UDP",
              "protocol": "Udp",
              "sourcePortRange": "*",
              "destinationPortRange": "3391",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 130,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "name": "CreateDC",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2015-01-01",
      "dependsOn": [
        "[concat('Microsoft.Network/virtualNetworks/',variables('VNetname'))]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('StandardStorageAccountName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('DCSecurityGroupName'))]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(variables('AssetLocation'),'/Templates/createDC.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "Location": { "value": "[parameters('Location')]" },
          "StorageAccountName": { "value": "[variables('StandardStorageAccountName')]" },
          "Vnetname": { "value": "[variables('VNetname')]" },
          "VNetSubnet1Name": { "value": "[variables('VNetSubnet1Name')]" },
          "DCAvailabilitySetName": { "value": "[variables('DCAvailabilitySetName')]" },
          "DCSecurityGroupName": { "value": "[variables('DCSecurityGroupName')]" },
          "DCName": { "value": "[variables('DC01Name')]" },
          "AdminUserName": { "value": "[parameters('domainAdmin') ]" },
          "AdminPassword": { "value": "[ parameters('domainAdminPassword')]" },
          "DomainName": { "value": "[parameters('Windows Domain name')]" },
          "DCWindowsOSVersion": { "value": "[variables('DCWindowsOSVersion')]" },
          "DCSize": { "value": "[parameters('DCSize')]" },
          "DCIPAddress": { "value": "[variables('DCIPAddress')]" },
          "AssetLocation": { "value": "[variables('AssetLocation')]" },
          "WMFversion": { "value": "[variables('WMFversion')]" }
        }
      }
    },
    {
      "name": "UpdateVNetDNS",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2015-01-01",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/','createDC')]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(variables('AssetLocation'),'/Templates/updateVNetDNS.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "Location": { "value": "[parameters('location')]" },
          "VNetName": { "value": "[variables('VNetname')]" },
          "VNetPrefix": { "value": "[variables('VNetPrefix')]" },
          "VNetSubnet1Name": { "value": "[variables('VNetSubnet1Name')]" },
          "VNetSubnet1Prefix": { "value": "[variables('VNetSubnet1Prefix')]" },
          "VNetSubnet2Name": { "value": "[variables('VNetSubnet2Name')]" },
          "VNetSubnet2Prefix": { "value": "[variables('VNetSubnet2Prefix')]" },
          "DNSServer": { "value": "[variables('DCIPAddress')]" }
        }
      }
    },
    {
      "name": "CreateRDS",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2015-01-01",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/','createDC')]",
        "[concat('Microsoft.Storage/storageAccounts/', variables('StandardStorageAccountName'))]",
        "[concat('Microsoft.Resources/deployments/','UpdateVNetDNS')]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('RDSSecurityGroupName'))]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(variables('AssetLocation'),'/Templates/createRDS.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "Location": { "value": "[parameters('Location')]" },
          "StorageAccountName": { "value": "[variables('StandardStorageAccountName')]" },
          "Vnetname": { "value": "[variables('VNetname')]" },
          "VNetSubnet1Name": { "value": "[variables('VNetSubnet2Name')]" },
          "RDSAvailabilitySetName": { "value": "[variables('RDSAvailabilitySetName')]" },
          "RDSSecurityGroupName": { "value": "[variables('RDSSecurityGroupName')]" },
          "RDSName": { "value": "[variables('RDS01Name')]" },
          "AdminUserName": { "value": "[parameters('domainAdmin') ]" },
          "AdminPassword": { "value": "[ parameters('domainAdminPassword')]" },
          "DomainName": { "value": "[parameters('Windows Domain name')]" },
          "RDSWindowsOSVersion": { "value": "[variables('RDSWindowsOSVersion')]" },
          "RDSSize": { "value": "[parameters('RDSSize')]" },
          "RDSIPAddress": { "value": "[variables('RDS01IPAddress')]" },
          "AssetLocation": { "value": "[variables('AssetLocation')]" }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('DC01Name'),'/BGInfo')]",
      "apiVersion": "2015-06-15",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/','createDC')]"
      ],
      "location": "[parameters('Location')]",
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "BGInfo",
        "typeHandlerVersion": "2.1",
        "settings": {
          "Properties": [
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(variables('RDS01Name'),'/BGInfo')]",
      "apiVersion": "2015-06-15",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/','createRDS')]"
      ],
      "location": "[parameters('Location')]",
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "BGInfo",
        "typeHandlerVersion": "2.1",
        "settings": {
          "Properties": [
          ]
        }
      }
    },
    {
      "name": "[concat(variables('DC01Name'),'/startOrchestration')]",
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "location": "[parameters('Location')]",
      "apiVersion": "2015-05-01-preview",
      "dependsOn": [
        "[concat('Microsoft.Resources/deployments/','createDC')]",
        "[concat('Microsoft.Resources/deployments/','createRDS')]",
        "[concat('Microsoft.Resources/deployments/','CreateRDSWebAccess')]"
      ],
      "tags": {
        "displayName": "startOrchestration"
      },
      "properties": {
        "publisher": "Microsoft.Compute",
        "type": "CustomScriptExtension",
        "typeHandlerVersion": "1.4",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[variables('customScriptUrl')]"
          ],
          "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File ', variables('customScriptName'), variables('customScriptParameters'))]"
        }
      }
    }
  ],
  "outputs": {
    "DCSize": {
      "type": "string",
      "value": "[parameters('DCSize')]"
    }

  }
}
